<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".readData">
    <TextView
        android:id="@+id/bmitext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/bmivalue"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        app:layout_constraintTop_toBottomOf="@+id/bmitext"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmivalue"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/breakfastmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/breakfast"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/MidMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midmeal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakfastmenu"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/MidMealmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/MidMeal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/Lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MidMealmenu"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/Lunchmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Lunch"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/Snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Lunchmenu"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/Snacksmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Snacks"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/Dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Snacksmenu"
        android:layout_marginTop="28dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:id="@+id/Dinnermenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Dinner"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
