<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:text="@string/enter_name"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        />

    <EditText
        style="@style/LoginTextInputOuterFieldStyle"
        android:id="@+id/Entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintTop_toBottomOf="@id/nametext"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/agetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Entername"
        android:layout_marginTop="40dp"
        android:text="@string/enter_age"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        />

    <EditText
        style="@style/LoginTextInputOuterFieldStyle"
        android:id="@+id/Enterage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintTop_toBottomOf="@id/agetext"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/heighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Enterage"
        android:layout_marginTop="40dp"
        android:text="@string/enter_height"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        />

    <EditText
        style="@style/LoginTextInputOuterFieldStyle"
        android:id="@+id/Enterheight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintTop_toBottomOf="@id/heighttext"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/weighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Enterheight"
        android:layout_marginTop="40dp"
        android:text="@string/enter_weight"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        />

    <EditText
        style="@style/LoginTextInputOuterFieldStyle"
        android:id="@+id/Enterweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintTop_toBottomOf="@id/weighttext"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/Enterweight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>