<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/eggimage"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:scaleType="center"
        android:background="@drawable/egg"
        android:foreground="@drawable/gradient_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forkspoon"
        app:layout_constraintTop_toBottomOf="@id/eggimage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forkspoon"
        app:layout_constraintTop_toBottomOf="@id/eggimage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/button1"
        android:textColor="@color/white"
        app:icon="@drawable/maillogo"
        app:iconTint="@null"
        android:paddingStart="44dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/eggimage"
        android:lines="2"
        android:textSize="16sp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up_with_email"
        android:textAllCaps="false"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="19dp"
        />
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button1"
        android:orientation="horizontal"
        android:layout_marginTop="6.92dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        >
        <View
            android:id="@+id/line1"
            android:layout_width="91.44dp"
            android:layout_height="1dp"
            android:layout_marginStart="15.42dp"
            android:layout_marginTop="11dp"
            android:background="@color/black"
            />
        <TextView
            android:id="@+id/usesocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_use_social_sign_up"
            android:textColor="@color/black"
            android:layout_marginStart="14dp"
        />
        <View
            android:id="@+id/line2"
            android:layout_width="91.44dp"
            android:layout_height="1dp"
            android:layout_marginStart="15.42dp"
            android:layout_marginTop="11dp"
            android:background="@color/black"
            />
    </LinearLayout>


    <Button
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:text="@string/continue_with_google"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/google"
        android:paddingStart="44dp"
        android:lines="2"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:backgroundTint="@color/black"
        app:iconTint="@null"
        />
    <TextView
        android:id="@+id/haveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:layout_marginTop="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="90dp"
        />
    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/haveacc"
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:layout_marginTop="42dp"
        android:gravity="start"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
